kubernetes/django/deployment.yaml
apiVersion: extensions/v1
kind: Deployment
metadata:
  name: django_deployment
  labels:
    deployment: django
spec:
  replicas: 4
  selector:
    matchLabels:
      pod: django
  template:
    metadata:
      labels:
        pod: django
    spec:
      containers:
        - name: django
          image: apartmenthelper_production_django
          ports:
            - containerPort: 8000
          command: /start
