kubernetes/django/service.yaml
apiVersion: extensions/v1
kind: Service
metadata:
  name: apartmenthelper_django_service
spec:
  selector:
    deployment: apartmenthelper_django
  ports:
  - name:
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: NodePort
