kubernetes/django/ingress.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: apartmenthelper_django_ingress
spec:
  backend:
    serviceName: apartmenthelper_django_service
    servicePort: 8000
